ascent_macro_tests/tests/macros/fail/missing_relation_keyword.err.txt
error: relation fact not defined
 --> /tests/macros/fail/missing_relation_keyword.rs:7:5
  |
7 |     fact(usize);
  |     ^^^^
